--- a/MyApp/app/src/main/res/layout/activity_main.xml
+++ b/MyApp/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
 
             android:orientation="horizontal">
             <Button
+                android:id="@+id/Btn_weather"
                 android:text="天气"
                 android:background="#2c892c"
                 android:layout_width="0dp"
@@ -72,6 +73,7 @@
                 android:layout_weight="2"
                 android:layout_margin="5dp"/>
             <Button
+                android:id="@+id/Btn_dachexinxi"
                 android:text="打车信息"
                 android:background="#e172bc"
                 android:layout_width="0dp"
@@ -115,6 +117,7 @@
                 android:layout_margin="5dp"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/Lin_location"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
